--- a/andrew-peacock/public/admin.html
+++ b/andrew-peacock/public/admin.html
@@ -48,7 +48,7 @@
     <script src="scripts/article.js"></script>
     <script src="scripts/articleView.js"></script>
     <script>
-      Article.fetchAll();
+      module.Article.fetchAll();
     </script>
   </body>
 </html>
